BST-128453 - 6020, 6030, 6076 - Display a warning page upon activation of the 'Change' link for Accounting Information on the CYA page (#226)
* BST-126362 BST-127200 - 6030 Refactor 'Franchises or lettings' section to use a single loop

* BST-128453 - 6020, 6030, 6076 - Display a warning page upon activation of the 'Change' link for Accounting Information on the CYA page